force-app/main/default/objects/User/fields/AR_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>AR_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Summary Report</label>
    <type>Checkbox</type>
</CustomField>