force-app/main/default/objects/User/fields/Assign_Details__c.field-meta.xml
<CustomField>
    <fullName>Assign_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Details</label>
    <type>Checkbox</type>
</CustomField>