force-app/main/default/objects/User/fields/Can_Change_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Can_Change_Opportunity_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Change Opportunity Status</label>
    <type>Checkbox</type>
</CustomField>