force-app/main/default/objects/User/fields/Can_Configure_CWB_Settings__c.field-meta.xml
<CustomField>
    <fullName>Can_Configure_CWB_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Configure CWB Settings</label>
    <type>Checkbox</type>
</CustomField>