force-app/main/default/objects/User/fields/Can_Generate_Payout_Statement__c.field-meta.xml
<CustomField>
    <fullName>Can_Generate_Payout_Statement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Generate Payout Statement</label>
    <type>Checkbox</type>
</CustomField>