force-app/main/default/objects/User/fields/Can_Send_Email_Payout_Statement__c.field-meta.xml
<CustomField>
    <fullName>Can_Send_Email_Payout_Statement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Send Email Payout Statement</label>
    <type>Checkbox</type>
</CustomField>