force-app/main/default/objects/User/fields/Client_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Client_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Summary Report</label>
    <type>Checkbox</type>
</CustomField>