force-app/main/default/objects/User/fields/Funding_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Funding_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Summary Report</label>
    <type>Checkbox</type>
</CustomField>