force-app/main/default/objects/User/fields/Historical_Data_Tab__c.field-meta.xml
<CustomField>
    <fullName>Historical_Data_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Data Tab</label>
    <type>Checkbox</type>
</CustomField>