force-app/main/default/objects/User/fields/Intake_Tab__c.field-meta.xml
<CustomField>
    <fullName>Intake_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Tab</label>
    <type>Checkbox</type>
</CustomField>