force-app/main/default/objects/User/fields/Loan_Overview_Edit__c.field-meta.xml
<CustomField>
    <fullName>Loan_Overview_Edit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Generate Payout Balance</label>
    <type>Checkbox</type>
</CustomField>