force-app/main/default/objects/User/fields/PPSA_Expiry_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>PPSA_Expiry_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is for enable and disable of PPSA Expiry Summary report of front end</description>
    <label>PPSA Expiry Summary Report</label>
    <type>Checkbox</type>
</CustomField>